--- a/Assets/EasyUI/package.json
+++ b/Assets/EasyUI/package.json
@@ -4,5 +4,9 @@
     "version": "1.0.0",
     "unity": "2018.3",
     "description": "简单的UI框架",
-    "keywords": ["ui", "ugui"]
+    "keywords": ["ui", "ugui"],
+    "dependencies": {
+        "com.yj.unitask": "1.1.0",
+        "com.yj.unirx": "1.0.0"
+    }
 }
