--- a/Assets/EasyUI/package.json
+++ b/Assets/EasyUI/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "com.yj.easyui",
+    "name": "com.github.fanhexin.easyui",
     "displayName": "EasyUI",
     "version": "1.0.0",
     "unity": "2018.3",
