--- a/Assets/EasyUI/package.json
+++ b/Assets/EasyUI/package.json
@@ -1,8 +1,12 @@
 {
     "name": "com.github.fanhexin.easyui",
     "displayName": "EasyUI",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "unity": "2018.3",
     "description": "简单的UI框架",
-    "keywords": ["ui", "ugui"]
+    "keywords": ["ui", "ugui"],
+    "dependencies": {
+        "com.cysharp.unitask" : "1.2.0",
+        "com.neuecc.unirx" : "7.1.0"
+    }
 }
