--- a/Assets/EasyUI/package.json
+++ b/Assets/EasyUI/package.json
@@ -1,11 +1,13 @@
 {
-    "name": "com.github.fanhexin.easyui",
+    "name": "com.hpcfun.easyui",
     "displayName": "EasyUI",
-    "version": "1.0.1",
+    "version": "1.0.0",
     "unity": "2018.3",
     "description": "简单的UI框架",
     "keywords": ["ui", "ugui"],
     "dependencies": {
+        "com.unity.modules.ui": "1.0.0",
+        "com.unity.modules.animation": "1.0.0",
         "com.cysharp.unitask" : "1.2.0",
         "com.neuecc.unirx" : "7.1.0"
     }
