upgrade unitask from v1 to v2

--- a/Assets/EasyUI/EasyUI.asmdef
+++ b/Assets/EasyUI/EasyUI.asmdef
@@ -2,7 +2,7 @@
     "name": "EasyUI",
     "references": [
         "UniRx",
-        "UniRx.Async"
+        "UniTask"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [],
